# module14_HW8

1_Mongo/: authors.json  connect.py  hw_help.md  main.py  models.py  pyproject.toml  seeds.py
2_RabbitMQ/: consumer.py  models.py  producer.py  pyproject.toml
