[tool.poetry]
name = "MODULE-08/HW/P1_Mongo"
version = "0.1.0"
description = "HW Mongo DB"
authors = ["Rishniak Valerii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
